--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,16 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
+  
+      - uses: subosito/flutter-action@v1
+        with:
+          channel: 'stable' # or: 'beta', 'dev' or 'master'
+          
+      - name: Install Dependencies
+        run: flutter pub get
+        
+      - name: Flutter Test 
+        run: flutter test
 
       - name: Build iOS
         run: flutter build ios --release --no-codesign
